@@ -37,12 +37,8 @@ import net.croz.nrich.search.repository.stub.TestSubEntity;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public final class JpaSearchRepositoryExecutorGeneratingUtil {
@@ -57,7 +53,7 @@ public final class JpaSearchRepositoryExecutorGeneratingUtil {
     public static List<TestEntity> generateListForSearch(EntityManager entityManager, int numberOfCollectionEntities) {
         List<TestEntity> testEntityList = IntStream.range(0, 5)
             .mapToObj(value -> createTestEntity(value, numberOfCollectionEntities))
-            .collect(Collectors.toList());
+            .toList();
 
         testEntityList.get(1).setTestEntityEnum(TestEntityEnum.SECOND);
 
@@ -75,8 +71,8 @@ public final class JpaSearchRepositoryExecutorGeneratingUtil {
     public static List<TestStringSearchEntity> generateListForStringSearch(EntityManager entityManager) {
         LocalDate date = LocalDate.parse("01.01.1970", DateTimeFormatter.ofPattern("dd.MM.yyyy"));
         List<TestStringSearchEntity> testEntityList = IntStream.range(0, 5)
-            .mapToObj(value -> createTestStringSearchEntity("name " + value, 50 + value, date.plus(value, ChronoUnit.DAYS)))
-            .collect(Collectors.toList());
+            .mapToObj(value -> createTestStringSearchEntity("name " + value, 50 + value, date.plusDays(value)))
+            .toList();
 
         testEntityList.forEach(entityManager::persist);
 
@@ -86,7 +82,7 @@ public final class JpaSearchRepositoryExecutorGeneratingUtil {
     public static List<TestEntityWithEmbeddedId> generateTestEntityWithEmbeddedIdList(EntityManager entityManager) {
         return IntStream.range(0, 5)
             .mapToObj(value -> generateTestEntityWithEmbeddedId(entityManager, "name" + value))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static TestEntityWithEmbeddedId generateTestEntityWithEmbeddedId(EntityManager entityManager, String name) {
@@ -123,7 +119,7 @@ public final class JpaSearchRepositoryExecutorGeneratingUtil {
         IntStream.range(0, 3).forEach(value -> {
             TestEntityWithCustomId entity = new TestEntityWithCustomId();
 
-            entity.setEnumElementCollection(Collections.singletonList(value % 2 == 0 ? TestEntityEnum.FIRST : TestEntityEnum.SECOND));
+            entity.setEnumElementCollection(List.of(value % 2 == 0 ? TestEntityEnum.FIRST : TestEntityEnum.SECOND));
 
             entityManager.persist(entity);
         });
@@ -143,7 +139,7 @@ public final class JpaSearchRepositoryExecutorGeneratingUtil {
         TestNestedEntity nestedEntity = createTestNestedEntity(value);
         List<TestCollectionEntity> collectionEntityList = IntStream.range(0, numberOfCollectionEntities)
             .mapToObj(counter -> createTestCollectionEntity("collection" + (value + counter)))
-            .collect(Collectors.toList());
+            .toList();
         TestEntityEmbedded testEntityEmbedded = createTestEntityEmbedded("embedded" + value);
 
         TestEntity entity = new TestEntity();
@@ -154,7 +150,7 @@ public final class JpaSearchRepositoryExecutorGeneratingUtil {
         entity.setCollectionEntityList(collectionEntityList);
         entity.setTestEntityEnum(TestEntityEnum.FIRST);
         entity.setTestEntityEmbedded(testEntityEmbedded);
-        entity.setElementCollection(Arrays.asList("Element collection 1" + value, "Element collection 2" + value));
+        entity.setElementCollection(List.of("Element collection 1" + value, "Element collection 2" + value));
 
         return entity;
     }
@@ -165,7 +161,7 @@ public final class JpaSearchRepositoryExecutorGeneratingUtil {
         entity.setNestedEntityName("nested" + value);
         entity.setNestedEntityAliasName("nested alias" + value);
         entity.setDoubleNestedEntity(createTestDoubleNestedEntity(value));
-        entity.setRelated(Collections.singletonList(createTestDoubleNestedEntity(value)));
+        entity.setRelated(List.of(createTestDoubleNestedEntity(value)));
 
         return entity;
     }
